rust/crates/rax/src/text/rules/snapshots/rax__text__rules__one_in_char_set__tests__ascii_empty_input.snap
---
source: crates/rax/src/text/rules/one_in_char_set.rs
expression: result
---
Err(
    RuleError {
        reason: "empty input",
    },
)
