rust/crates/rax/src/text/rules/snapshots/rax__text__rules__one_in_char_set__tests__utf8_match.snap
---
source: crates/rax/src/text/rules/one_in_char_set.rs
expression: result
---
Ok(
    (
        '你',
        "好世界",
    ),
)
